fix: align dropdowns for filter in thematic layer

--- a/src/components/dimensions/styles/DimensionItemsSelect.module.css
+++ b/src/components/dimensions/styles/DimensionItemsSelect.module.css
@@ -1,5 +1,5 @@
 .select {
     width: 65%;
-    margin-top: 1px;
-    margin-right: 4px;
+    margin-top: var(--spacers-dp2);
+    margin-right: var(--spacers-dp4);
 }
